<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingHorizontal="20dp"
    >
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/pboard" />

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="20dp"
        android:id="@+id/input1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="20dp"
        android:id="@+id/input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="20dp"
        android:id="@+id/input3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/feedback"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/fed_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@android:color/holo_blue_dark"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"
        />

</LinearLayout>