<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/background" />

    <LinearLayout
        android:id="@+id/n_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/background"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-100dp">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/p"
            app:civ_border_color="@color/semiTransparentWhite"
            app:civ_border_width="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/cp_kamboj"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>

    <!--<android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_marginTop="24dp"
        app:theme="@style/TransparentBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:text="About"
            android:textSize="24sp" />
    </android.support.v7.widget.Toolbar>-->

    <LinearLayout
        android:layout_below="@id/n_l"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:weightSum="2"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2"
            >
            <Button
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:elevation="10dp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="17sp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/keyboard"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_red_light"
                >
            </Button>

            <Button
                android:id="@+id/settings_btn"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:elevation="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/settings"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@android:color/holo_blue_bright"
                >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2"
            >
            <Button
                android:id="@+id/feedback"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:elevation="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/feedback"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@android:color/holo_orange_light"
                >
            </Button>

            <Button
                android:id="@+id/about_btn"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:elevation="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/about"
                android:layout_weight="1"
                android:textSize="17sp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@android:color/holo_green_light"
                >
            </Button>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
